# lora-e5-dev-rs

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: log.rs  main.rs
