[package]
name = "lora-e5-dev"
version = "0.1.0"
authors = ["Francesco Saccani <francesco.saccani@unipr.it>"]
edition = "2018"
description = "Ready to use template for flashing and debugging LoRa-E5-Dev Board"
readme = "README.md"

[[bin]]
name = "lora-e5-dev"
test = false
bench = false

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
lora-e5-bsp = "0.6.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
